getting location, writing to file, reading from file

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,15 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="35dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="read log"
+        android:id="@+id/readLogBtn"
+        android:layout_below="@+id/textViewLatitude"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="27dp"
+        android:onClick="readLog"/>
+
 </RelativeLayout>
